--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/naxmefy/node-pgoapi#readme",
   "dependencies": {
+    "lodash": "^4.14.1",
+    "pokemon-go-node-api": "^1.4.0",
     "request": "^2.74.0",
     "request-promise": "^4.0.2"
   },
